--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Payment method plugin for Juzaweb CMS",
     "extra": {
         "juzaweb": {
-            "name": "juzaweb/payment-method",
+            "name": "Payment Method Management",
             "domain": "payment_method",
             "version": "1.0",
             "providers": [
